# CollabLLM-repro

./: .gitignore  CLAUDE.md  dataset_utils.py  main.py  pyproject.toml  run_and_test.ipynb  startup.sh  train_sft.py  train_utils.py
collabllm/prompts/: user_simulator.txt
collabllm/simulation/: README.md  __init__.py  assistant.py  simulator.py  user_models.py
collabllm/training/: train_utils.py
notebook_tutorials/: README.md  build_datasets.ipynb  compute_mr_api.ipynb  compute_mr_local.ipynb
notebooks/: run_and_test.ipynb  test_chat_rollout.ipynb  test_trained_model.ipynb
rl/: rl.py
scripts/: train_sft.py
tests/: test_simulation.py
training/: train_sft.py
