[project]
name = "collablllm-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes>=0.48.2",
    "datasets>=4.5.0",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "trl>=0.27.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
